syntax = "proto3";
package authentication;

service AuthenticatedService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse) {}
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool status = 1;
  string message = 2;
  string token = 3;
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  bool status = 1;
  string message = 2;
}

message SignUpRequest {
  string firstname = 1;
  string lastname = 2;
  string email = 3;
  string phone = 4;
  string password = 5;
} 

message SignUpResponse {
  bool status = 1;
  string message = 2;
  int32 id = 3;
}